Fixed alignment of ul items in Index.jsx

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,3 +3,8 @@ body {
     background-color: bisque;
     text-align: center;
 }
+
+ul { 
+	display: inline-block; 
+	text-align: left; 
+}
